# roguelike

./: Cargo.toml  README.md
assets/levels/: level1.ron
src/: collect_dead.rs  config.rs  damage_system.rs  damageable.rs  inventory_system.rs  main.rs  main_menu.rs  map.rs  map_indexer.rs  monster.rs  player.rs  position.rs  spawner.rs  user_interface.rs  viewshed.rs
src/components/: CombatStats.rs  collidable.rs  combat_stats.rs  combattable.rs  consumable.rs  damage.rs  damageable.rs  inventory.rs  item.rs  mod.rs  position.rs  suffer_damage.rs  user_input.rs
src/configs/: game_settings.rs  mod.rs
src/inventory/: components.rs  plugin.rs  systems.rs
src/map/: game_map.rs  generate_map_system.rs  mod.rs  plugin.rs  render_map_system.rs  spawn_map_tiles_system.rs
src/utils/: input_utils.rs  mod.rs  rectangle.rs  render.rs
